# EventsInQt

./: README.md
code/: CMakeLists.txt  Repo.h  bestwindow.h  bestwindow.ui  event.h  main.cpp  observer.h  personwindow.ui  service.h
prestanta/: bestwindow.cpp  person.h  personwindow.cpp  personwindow.h
